--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +12,9 @@
         <a href="">WebStudio</a>
         <nav>
             <ul>
-                <li><a href="">Studia</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
         <ul>
@@ -24,30 +24,32 @@
     </header>
     <!--Main site-->
     <main>
-        <h1>Effective solutions <br> for your business</h1>
-        <a href="">Order service</a>
+        <section>
+            <h1>Эффективные решения <br> для вашего бизнеса</h1>
+            <a href="">Заказать услугу</a>
+        </section>
         <section>
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h2>Внимание к деталям</h2>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h2>Пунктуальность</h2>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h2>Планирование</h2>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h2>Современные технологии</h2>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>What we're doing?</h2>
+            <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="image/keyboard.jpeg" alt="keyboard" width="370"></li>
                 <li><img src="image/mobile.jpeg" alt="mobile" width="370"></li>
@@ -55,41 +57,44 @@
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
+            <h2>Наша команда</h2>
             <ul>
                 <li>
                     <img src="image/person_1.jpeg" alt="Igor_Demianenko" width="270">
-                    <h5>Igor Demianenko</h5>
-                    <p>Product Designer</p>
+                    <h3>Игорь Демяненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="image/person_2.jpeg" alt="Olga_Repina" width="270">
-                    <h5>Olga Repina</h5>
-                    <p>Frontend Developer</p>
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="image/person_3.jpeg" alt="Nikolay_Tarasov" width="270">
-                    <h5>Nikolay Tarasov</h5>
-                    <p>Marketing</p>
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="image/person_4.jpeg" alt="Mikhail_Ermakov" width="270">
-                    <h5>Mikhail Ermakov</h5>
-                    <p>UI Designer</p>
+                    <h3>Михаиль Ермаков</h3>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <!--Footer site-->
+    <!--Футер-->
     <footer>
-        <a href="">WebStudio</a>
-        <ul>
-            <li><a href="adress:https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г.
-                Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li><a href="mailo:">info@example.com</a></li>
-            <li><a href="tel:">+38 099 111 11 11</a></li>
-        </ul>
+        <adress>
+            <a href="">WebStudio</a>
+            <ul>
+                <li>
+                    <a href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г.
+                        Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li><a href="mailo:">info@example.com</a></li>
+                <li><a href="tel:">+38 099 111 11 11</a></li>
+            </ul>
+        </adress>
     </footer>   
 </body>
 </html>
