--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a href="">Заказать услугу</a>
         </section>
         <section>
+            <h2>Скрытые заголовки</h2>
             <ul>
                 <li>
                     <h2>Внимание к деталям</h2>
