--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Homework-1</title>
 </head>
 <body>
-    <!--Header site-->
+    <!--Шапка-->
     <header>
         <a href="">WebStudio</a>
         <nav>
